--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -96,7 +96,7 @@
                   <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/login" class="link">Account Login</a>
                 </div>
                 <div class="col">
-                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/resetpassword" class="link">Forgot password?</a>
+                  <a [ngStyle]="{'pointer-events': state.dataState === DataState.LOADING ? 'none' : ''}" routerLink="/reset-pass" class="link">Forgot password?</a>
                 </div>
               </div>
             </div>
