--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -143,10 +143,21 @@
                   </div>
                 </div>
                 <div>
-                  <button [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' || profileForm.invalid || profileForm.pristine || !isSelectedCountyValid() || !isSelectedCityValid() ||  (isLoading$ | async)"
-                          class="btn btn-primary" type="submit">
-                    <span *ngIf="isLoading$ | async" aria-hidden="true" class="spinner-border spinner-border-sm"
-                          role="status" style="margin-right: 5px;"></span>
+                  <button [disabled]="state?.appData?.data?.user?.roleName === 'ROLE_USER' ||
+                          profileForm.invalid ||
+                          profileForm.pristine ||
+                          !isSelectedCountyValid() ||
+                          !isSelectedCityValid() ||
+                          (isLoading$ | async)"
+                          class="btn btn-primary"
+                          type="submit">
+
+                    <span *ngIf="isLoading$ | async"
+                          aria-hidden="true"
+                          class="spinner-border spinner-border-sm"
+                          role="status"
+                          style="margin-right: 5px;">
+                    </span>
                     <span *ngIf="isLoading$ | async"> Loading...</span>
                     <span *ngIf="!(isLoading$ | async)">Update</span>
                   </button>
